<resources>
    //common for the app
    <string name="app_name">Dream Wedding</string>
    <string name="idapp">Dream Wedding</string>
    <string name="btnnext">Next</string>
    <string name="title_activity_main_home">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_photography">Photography</string>
    <string name="title_decorations">Decorations</string>
    <string name="title_costumes">Costumes</string>
    <string name="resetpass2text">Re-enter your password</string>

    <string name="vehEditbtn">Update</string>

    <string name="btnDecoView">View Decorators</string>
    <string name="ViewVehTitle">VEHICLE DETAILS</string>

    <string name="weddingapptitle">DREAM WEDDING</string>
    <string name="HomeDECimg">Wedding Decorations</string>
    <string name="HomePHOimg">Wedding Photography</string>
    <string name="HomeCOSimg">Wedding Costumes</string>
    <string name="HomeVEHimg">Wedding Cars</string>

    <string name="tvl3n" />
    <string name="deleteDeco">Delete</string>
    <string name="DeleteDecoHead">Delete Decorator</string>
    <string name="BookDeco">Book</string>
    <string name="decoTV">Decorators</string>


</resources>
